Tue Feb  9 13:52:49 2016  Zachary Scott  <zzak@ruby-lang.org>

	* re.c: Remove deprecated kcode argument from Regexp.new and compile
	  patch provided by Dylan Pulliam [Bug #11495]

Mon Feb  8 21:26:19 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, enc/unicode/casefold.h: Flags for
	  upper/lower conversion added (titlecase and SpecialCasing still missing)
	  (with Kimihito Matsui)

Mon Feb  8 20:43:57 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c, enc/unicode.c: Disassociating ONIGENC_CASE_FOLD flag from
	  ONIGENC_CASE_DOWNCASE.
	(with Kimihito Matsui)

Mon Feb  8 13:00:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Shortened macros for enc/unicode/casefold.h to
	  single-letter; use flags in casefold.h for logic.

	* enc/unicode/case-folding.rb: Added flag for case folding.
	  Changed parameter passing.

	* enc/unicode/casefold.h: New flags added.
	(with Kimihito Matsui)

Mon Feb  8 10:30:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (feature_option): raise a runtime error if ambiguous
	  feature name is given, in the future.  [Bug #12050]

Mon Feb  8 09:43:57 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Removed enc/unicode/casefold.h from automatic build because
	  some CI systems don't have gperf. Creation of enc/unicode/casefold.h
	  is now possible with make unicode-up. This is intended as a temporary measure.

Sun Feb  7 22:10:08 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Added two more precondition files for enc/unicode/casefold.h

	* enc/unicode.c: Added shortening macros for enc/unicode/casefold.h

	* enc/unicode/case-folding.rb: Fixed file encoding for CaseFolding.txt
	  to ASCII-8BIT (should fix some ci errors). Clarified usage. Created
	  class MapItem. Partially implemented class CaseMapping.
	(with Kimihito Matsui)

Sun Feb  7 14:12:32 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Fixing parameter passing.